# Scholar-Bot

./: main.py  pyproject.toml
