[tool.poetry]
name = "repl_python3_beta_Scholar-Bot"
version = "0.1.0"
description = ""
authors = ["MdJunaedJunaed <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.1.0"
scholarly = "^1.2.0"
scihub = "^0.0.1"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
